syntax = "proto3";

package auth;

option go_package = "auth.v1;authv1";

service Auth {
    rpc SaveUser (SaveUserRequest) returns (SaveUserResponse);
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse);
    rpc Parse (ParseRequest) returns (ParseResponse);
    rpc Refresh (RefreshRequest) returns (RefreshResponse);
}

message SaveUserRequest {
   string email = 1;
   string password = 2;
}

message SaveUserResponse {
    int64 user_id = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    int64 user_id = 1;
    string access_token =2;
    string refresh_token=3;
}

message ParseRequest {
    string access_token = 1;
}

message ParseResponse {
    int64 user_id = 1;
}

message RefreshRequest {
    string refresh_token = 1;
}

message RefreshResponse{
    int64 user_id = 1;
    string access_token =2;
    string refresh_token=3;
}
